Updated videojs version to 7.0.2, added videojs-contrib-quality-levels as testing dependency
Updated videojs version to 7.0.2, added videojs-contrib-quality-levels as testing dependency

--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
   ],
   "dependencies": {
     "global": "^4.3.2",
-    "video.js": "^5.19.2 || ^6.6.0"
+    "video.js": "^7.0.0",
+    "videojs-contrib-quality-levels": "^2.0.4"
   },
   "devDependencies": {
     "babel-plugin-external-helpers": "^6.22.0",
